Src/RpcInterface/XilEnvRpc.h

// Connect
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ConnectTo(const char* NetAddr);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ConnectToInstance(const char* NetAddr, const char *InstanceName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_DisconnectFrom(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_DisconnectAndClose(int SetErrorLevelFlag, int ErrorLevel);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_IsConnectedTo(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetVersion(void);
CFUNC SCRPCDLL_API char * __STDCALL__ XilEnv_GetAPIModulePath(void);
// Other
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_CreateFileWithContent (const char *Filename,
                                                             const char *Content);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetEnvironVar (const char *EnvironVar);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetEnvironVar (const char *EnvironVar, const char *EnvironValue);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ChangeSettings (const char *SettingName, const char *ValueString);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_TextOut (const char *TextOut);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ErrorTextOut (int ErrLevel, const char *TextOut);
// Scheduler
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_StopScheduler(void);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_ContinueScheduler(void);
CFUNC SCRPCDLL_API int  __STDCALL__ XilEnv_IsSchedulerRunning(void);
CFUNC SCRPCDLL_API int  __STDCALL__ XilEnv_StartProcess(const char* name);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartProcessAndLoadSvl(const char* ProcessName, const char* SvlName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartProcessEx(const char* ProcessName,
                                                     int Prio, 
                                                     int Cycle, 
                                                     short Delay, 
                                                     int Timeout, 
                                                     const char *SVLFile, 
                                                     const char *BBPrefix,
                                                     int UseRangeControl,  // If 0, than ignore all following "RangeControl*" parameter
                                                     int RangeControlBeforeActiveFlags,
                                                     int RangeControlBehindActiveFlags,
                                                     int RangeControlStopSchedFlag,
                                                     int RangeControlOutput,
                                                     int RangeErrorCounterFlag,
                                                     const char *RangeErrorCounter,
                                                     int RangeControlVarFlag,
                                                     const char *RangeControl,
                                                     int RangeControlPhysFlag,
                                                     int RangeControlLimitValues);
SCRPCDLL_API int __STDCALL__ XilEnv_StartProcessEx2(const char* ProcessName,
                                                int Prio, 
                                                int Cycle, 
                                                short Delay, 
                                                int Timeout, 
                                                const char *SVLFile, 
                                                const char *A2LFile, 
                                                int A2LFlags,
                                                const char *BBPrefix,
                                                int UseRangeControl,  // If 0, than ignore all following "RangeControl*" parameter
                                                int RangeControlBeforeActiveFlags,
                                                int RangeControlBehindActiveFlags,
                                                int RangeControlStopSchedFlag,
                                                int RangeControlOutput,
                                                int RangeErrorCounterFlag,
                                                const char *RangeErrorCounter,
                                                int RangeControlVarFlag,
                                                const char *RangeControl,
                                                int RangeControlPhysFlag,
                                                int RangeControlLimitValues);
CFUNC SCRPCDLL_API int  __STDCALL__ XilEnv_StopProcess(const char* name);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetNextProcess (int flag, char* filter);
CFUNC SCRPCDLL_API int  __STDCALL__ XilEnv_GetProcessState(const char* name);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_DoNextCycles (int Cycles);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_DoNextCyclesAndWait (int Cycles);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AddBeforeProcessEquationFromFile(int Nr, const char *ProcName, const char *EquFile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AddBehindProcessEquationFromFile(int Nr, const char *ProcName, const char *EquFile);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_DelBeforeProcessEquations(int Nr, const char *ProcName);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_DelBehindProcessEquations(int Nr, const char *ProcName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_WaitUntil (const char *Equation, int Cycles);
// Internal Processes
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartScript(const char* scrfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopScript(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartRecorder(const char* cfgfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopRecorder(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_RecorderAddComment(const char* Comment);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartPlayer(const char* cfgfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopPlayer(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartEquations(const char* equfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopEquations(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartGenerator(const char* genfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopGenerator(void);
// GUI
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_LoadDesktop(const char* file);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SaveDesktop(const char* file);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ClearDesktop(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_CreateDialog(const char* DialogName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AddDialogItem(const char* Description, const char* VariName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ShowDialog(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_IsDialogClosed(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SelectSheet (const char* SheetName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AddSheet (const char* SheetName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_DeleteSheet (const char* SheetName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_RenameSheet (const char* OldSheetName, const char* NewSheetName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_OpenWindow (const char* WindowName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_CloseWindow (const char* WindowName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_DeleteWindow (const char* WindowName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ImportWindow (const char* WindowName, const char* FileName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ExportWindow (const char* SheetName, const char* WindowName, const char* FileName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AddVari(const char* label, int type, const char* unit);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_RemoveVari(int vid);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AttachVari(const char* label);
CFUNC SCRPCDLL_API double __STDCALL__ XilEnv_Get(int vid);
CFUNC SCRPCDLL_API double __STDCALL__ XilEnv_GetPhys(int vid);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_Set(int vid, double value);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetPhys(int vid, double value);
CFUNC SCRPCDLL_API double __STDCALL__ XilEnv_Equ(const char* equ);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_WrVariEnable(const char* label, const char* process);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_WrVariDisable(const char* label, const char* process);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_IsWrVariEnabled(const char* label, const char* process);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_LoadRefList(const char* reflist, const char* process);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AddRefList(const char* reflist, const char* process);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SaveRefList(const char* reflist, const char* process);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetVariConversionType(int vid);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetVariConversionString(int vid);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetVariConversion(int vid, int type, const char* conv_string);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetVariType(int vid);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetVariUnit(int vid);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetVariUnit(int vid, char *unit);
CFUNC SCRPCDLL_API double __STDCALL__ XilEnv_GetVariMin(int vid);
CFUNC SCRPCDLL_API double __STDCALL__ XilEnv_GetVariMax(int vid);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetVariMin(int vid, double min);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetVariMax(int vid, double max);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetNextVari (int flag, char* filter);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetNextVariEx (int flag, char* filter, char *process, int AccessFlags);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetVariEnum (int vid, double value);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetVariDisplayFormatWidth (int vid);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetVariDisplayFormatPrec (int vid);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetVariDisplayFormat (int vid, int width, int prec);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ImportVariProperties (const char* Filename);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_EnableRangeControl (const char* ProcessNameFilter, const char* VariableNameFilter);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_DisableRangeControl (const char* ProcessNameFilter, const char* VariableNameFilter);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_WriteFrame (int *Vids, signed char *PhysOrRaw, double *ValueFrame, int Size);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetFrame (int *Vids, signed char *PhysOrRaw, double *RetValueFrame, int Size);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_WriteFrameWaitReadFrame (int *WriteVids, signed char *WritePhysOrRaw, double *WriteValues, int WriteSize,
                                                                   int *ReadVids, signed char *ReadPhysOrRaw, double *ReadValuesRet, int ReadSize);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ReferenceSymbol(const char* Symbol, const char *DisplayName, const char* Process, const char *Unit, int ConversionType, const char *Conversion,
                                                      double Min, double Max, int Color, int Width, int Precision, int Flags);