Src/RpcInterface/XilEnvRpc.py


		self.__Dll.XilEnv_GetAPIModulePath.restype = ct.c_char_p
		self.__Dll.XilEnv_GetAPIModulePath.argtypes = None

		self.__Dll.XilEnv_ConnectTo.restype = ct.c_int
		self.__Dll.XilEnv_ConnectTo.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_ConnectToInstance.restype = ct.c_int
		self.__Dll.XilEnv_ConnectToInstance.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_IsConnectedTo.restype = ct.c_int
		self.__Dll.XilEnv_IsConnectedTo.argtypes = None

		self.__Dll.XilEnv_DisconnectFrom.restype = ct.c_int
		self.__Dll.XilEnv_DisconnectFrom.argtypes = None

		self.__Dll.XilEnv_DisconnectAndClose.restype = ct.c_int
		self.__Dll.XilEnv_DisconnectAndClose.argtypes = [ct.c_int, ct.c_int]

		self.__Dll.XilEnv_GetVersion.restype = ct.c_int
		self.__Dll.XilEnv_GetVersion.argtypes = None
# Other
		self.__Dll.XilEnv_CreateFileWithContent.restype = ct.c_int
		self.__Dll.XilEnv_CreateFileWithContent.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_GetEnvironVar.restype = ct.c_char_p
		self.__Dll.XilEnv_GetEnvironVar.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_SetEnvironVar.restype = ct.c_int
		self.__Dll.XilEnv_SetEnvironVar.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_ChangeSettings.restype = ct.c_int
		self.__Dll.XilEnv_ChangeSettings.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_TextOut.restype = ct.c_int
		self.__Dll.XilEnv_TextOut.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_ErrorTextOut.restype = ct.c_int
		self.__Dll.XilEnv_ErrorTextOut.argtypes = [ct.c_int, ct.c_char_p]

# Scheduler
		self.__Dll.XilEnv_StopScheduler.restype = None
		self.__Dll.XilEnv_StopScheduler.argtypes = None

		self.__Dll.XilEnv_ContinueScheduler.restype = None 
		self.__Dll.XilEnv_ContinueScheduler.argtypes = None

		self.__Dll.XilEnv_IsSchedulerRunning.restype = ct.c_int
		self.__Dll.XilEnv_IsSchedulerRunning.argtypes = None

		self.__Dll.XilEnv_StartProcess.restype = ct.c_int
		self.__Dll.XilEnv_StartProcess.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_StartProcessAndLoadSvl.restype = ct.c_int
		self.__Dll.XilEnv_StartProcessAndLoadSvl.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_StartProcessEx.restype = ct.c_int
		self.__Dll.XilEnv_StartProcessEx.argtypes = [ct.c_char_p, ct.c_int,  ct.c_int, ct.c_short, ct.c_int, ct.c_char_p, ct.c_char_p, ct.c_int, ct.c_int, ct.c_int, ct.c_int, ct.c_int, ct.c_int, ct.c_char_p, ct.c_int, ct.c_char_p, ct.c_int, ct.c_int]

		self.__Dll.XilEnv_StartProcessEx2.restype = ct.c_int
		self.__Dll.XilEnv_StartProcessEx2.argtypes = [ct.c_char_p, ct.c_int,  ct.c_int, ct.c_short, ct.c_int, ct.c_char_p, ct.c_char_p, ct.c_uint, ct.c_char_p, ct.c_int, ct.c_int, ct.c_int, ct.c_int, ct.c_int, ct.c_int, ct.c_char_p, ct.c_int, ct.c_char_p, ct.c_int, ct.c_int]

		self.__Dll.XilEnv_StopProcess.restype = ct.c_int
		self.__Dll.XilEnv_StopProcess.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_GetNextProcess.restype = ct.c_char_p
		self.__Dll.XilEnv_GetNextProcess.argtypes = [ct.c_int, ct.c_char_p]

		self.__Dll.XilEnv_GetProcessState.restype = ct.c_int
		self.__Dll.XilEnv_GetProcessState.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_DoNextCycles.restype = None
		self.__Dll.XilEnv_DoNextCycles.argtypes = [ct.c_int]

		self.__Dll.XilEnv_DoNextCyclesAndWait.restype = None
		self.__Dll.XilEnv_DoNextCyclesAndWait.argtypes = [ct.c_int]

		self.__Dll.XilEnv_AddBeforeProcessEquationFromFile.restype = ct.c_int
		self.__Dll.XilEnv_AddBeforeProcessEquationFromFile.argtypes = [ct.c_int, ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_AddBehindProcessEquationFromFile.restype = ct.c_int
		self.__Dll.XilEnv_AddBehindProcessEquationFromFile.argtypes = [ct.c_int, ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_DelBeforeProcessEquations.restype = None
		self.__Dll.XilEnv_DelBeforeProcessEquations.argtypes = [ct.c_int, ct.c_char_p]

		self.__Dll.XilEnv_DelBehindProcessEquations.restype = None
		self.__Dll.XilEnv_DelBehindProcessEquations.argtypes = [ct.c_int, ct.c_char_p]

		self.__Dll.XilEnv_WaitUntil.restype = ct.c_int
		self.__Dll.XilEnv_WaitUntil.argtypes = [ct.c_char_p, ct.c_int]

# internal processes
		self.__Dll.XilEnv_StartScript.restype = ct.c_int
		self.__Dll.XilEnv_StartScript.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_StopScript.restype = ct.c_int
		self.__Dll.XilEnv_StopScript.argtypes = None

		self.__Dll.XilEnv_StartRecorder.restype = ct.c_int
		self.__Dll.XilEnv_StartRecorder.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_RecorderAddComment.restype = ct.c_int
		self.__Dll.XilEnv_RecorderAddComment.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_StopRecorder.restype = ct.c_int
		self.__Dll.XilEnv_StopRecorder.argtypes = None

		self.__Dll.XilEnv_StartPlayer.restype = ct.c_int
		self.__Dll.XilEnv_StartPlayer.argtypes = [ct.c_char_p]
		
		self.__Dll.XilEnv_StopPlayer.restype = ct.c_int
		self.__Dll.XilEnv_StopPlayer.argtypes = None

		self.__Dll.XilEnv_StartEquations.restype = ct.c_int
		self.__Dll.XilEnv_StartEquations.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_StopEquations.restype = ct.c_int
		self.__Dll.XilEnv_StopEquations.argtypes = None

		self.__Dll.XilEnv_StartGenerator.restype = ct.c_int
		self.__Dll.XilEnv_StartGenerator.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_StopGenerator.restype = ct.c_int
		self.__Dll.XilEnv_StopGenerator.argtypes = None

# GUI
		self.__Dll.XilEnv_LoadDesktop.restype = ct.c_int
		self.__Dll.XilEnv_LoadDesktop.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_SaveDesktop.restype = ct.c_int
		self.__Dll.XilEnv_SaveDesktop.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_ClearDesktop.restype = ct.c_int
		self.__Dll.XilEnv_ClearDesktop.argtypes = None

		self.__Dll.XilEnv_CreateDialog.restype = ct.c_int
		self.__Dll.XilEnv_CreateDialog.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_AddDialogItem.restype = ct.c_int
		self.__Dll.XilEnv_AddDialogItem.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_ShowDialog.restype = ct.c_int
		self.__Dll.XilEnv_ShowDialog.argtypes = None

		self.__Dll.XilEnv_IsDialogClosed.restype = ct.c_int
		self.__Dll.XilEnv_IsDialogClosed.argtypes = None

		self.__Dll.XilEnv_SelectSheet.restype = ct.c_int
		self.__Dll.XilEnv_SelectSheet.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_AddSheet.restype = ct.c_int
		self.__Dll.XilEnv_AddSheet.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_DeleteSheet.restype = ct.c_int
		self.__Dll.XilEnv_DeleteSheet.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_RenameSheet.restype = ct.c_int
		self.__Dll.XilEnv_RenameSheet.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_OpenWindow.restype = ct.c_int
		self.__Dll.XilEnv_OpenWindow.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_CloseWindow.restype = ct.c_int
		self.__Dll.XilEnv_CloseWindow.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_DeleteWindow.restype = ct.c_int
		self.__Dll.XilEnv_DeleteWindow.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_ImportWindow.restype = ct.c_int
		self.__Dll.XilEnv_ImportWindow.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_ExportWindow.restype = ct.c_int
		self.__Dll.XilEnv_ExportWindow.argtypes = [ct.c_char_p, ct.c_char_p, ct.c_char_p]

# Blackboard
		self.__Dll.XilEnv_AddVari.restype = ct.c_int
		self.__Dll.XilEnv_AddVari.argtypes = [ct.c_char_p, ct.c_int, ct.c_char_p]

		self.__Dll.XilEnv_RemoveVari.restype = ct.c_int
		self.__Dll.XilEnv_RemoveVari.argtypes = [ct.c_int]

		self.__Dll.XilEnv_AttachVari.restype = ct.c_int
		self.__Dll.XilEnv_AttachVari.argtypes = [ct.c_char_p]
		
		self.__Dll.XilEnv_Get.restype = ct.c_double
		self.__Dll.XilEnv_Get.argtypes = [ct.c_int]

		self.__Dll.XilEnv_GetPhys.restype = ct.c_double
		self.__Dll.XilEnv_GetPhys.argtypes = [ct.c_int]

		self.__Dll.XilEnv_Set.restype = None
		self.__Dll.XilEnv_Set.argtypes = [ct.c_int, ct.c_double]

		self.__Dll.XilEnv_SetPhys.restype = ct.c_int
		self.__Dll.XilEnv_SetPhys.argtypes = [ct.c_int, ct.c_double]

		self.__Dll.XilEnv_Equ.restype = ct.c_double
		self.__Dll.XilEnv_Equ.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_WrVariEnable.restype = ct.c_int
		self.__Dll.XilEnv_WrVariEnable.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_WrVariDisable.restype = ct.c_int
		self.__Dll.XilEnv_WrVariDisable.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_IsWrVariEnabled.restype = ct.c_int
		self.__Dll.XilEnv_IsWrVariEnabled.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_LoadRefList.restype = ct.c_int
		self.__Dll.XilEnv_LoadRefList.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_AddRefList.restype = ct.c_int
		self.__Dll.XilEnv_AddRefList.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_SaveRefList.restype = ct.c_int
		self.__Dll.XilEnv_SaveRefList.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_ExportRobFile.restype = ct.c_int
		self.__Dll.XilEnv_ExportRobFile.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_GetVariConversionType.restype = ct.c_int
		self.__Dll.XilEnv_GetVariConversionType.argtypes = [ct.c_int]

		self.__Dll.XilEnv_GetVariConversionString.restype = ct.c_char_p
		self.__Dll.XilEnv_GetVariConversionString.argtypes = [ct.c_int]

		self.__Dll.XilEnv_SetVariConversion.restype = ct.c_int
		self.__Dll.XilEnv_SetVariConversion.argtypes = [ct.c_int, ct.c_int, ct.c_char_p]

		self.__Dll.XilEnv_GetVariType.restype = ct.c_int
		self.__Dll.XilEnv_GetVariType.argtypes = [ct.c_int]

		self.__Dll.XilEnv_GetVariUnit.restype = ct.c_char_p
		self.__Dll.XilEnv_GetVariUnit.argtypes = [ct.c_int]

		self.__Dll.XilEnv_SetVariUnit.restype = ct.c_int
		self.__Dll.XilEnv_SetVariUnit.argtypes = [ct.c_int, ct.c_char_p]

		self.__Dll.XilEnv_GetVariMin.restype = ct.c_double 
		self.__Dll.XilEnv_GetVariMin.argtypes = [ct.c_int]

		self.__Dll.XilEnv_GetVariMax.restype = ct.c_double 
		self.__Dll.XilEnv_GetVariMax.argtypes = [ct.c_int]

		self.__Dll.XilEnv_SetVariMin.restype = ct.c_int
		self.__Dll.XilEnv_SetVariMin.argtypes = [ct.c_int, ct.c_double]

		self.__Dll.XilEnv_SetVariMax.restype = ct.c_int
		self.__Dll.XilEnv_SetVariMax.argtypes = [ct.c_int, ct.c_double]

		self.__Dll.XilEnv_GetNextVari.restype = ct.c_char_p
		self.__Dll.XilEnv_GetNextVari.argtypes = [ct.c_int, ct.c_char_p]

		self.__Dll.XilEnv_GetNextVariEx.restype = ct.c_char_p
		self.__Dll.XilEnv_GetNextVariEx.argtypes = [ct.c_int, ct.c_char_p, ct.c_char_p, ct.c_int]

		self.__Dll.XilEnv_GetVariEnum.restype = ct.c_char_p
		self.__Dll.XilEnv_GetVariEnum.argtypes = [ct.c_int, ct.c_char_p, ct.c_double]

		self.__Dll.XilEnv_GetVariDisplayFormatWidth.restype = ct.c_int
		self.__Dll.XilEnv_GetVariDisplayFormatWidth.argtypes = [ct.c_int]

		self.__Dll.XilEnv_GetVariDisplayFormatPrec.restype = ct.c_int
		self.__Dll.XilEnv_GetVariDisplayFormatPrec.argtypes = [ct.c_int]

		self.__Dll.XilEnv_SetVariDisplayFormat.restype = ct.c_int
		self.__Dll.XilEnv_SetVariDisplayFormat.argtypes = [ct.c_int, ct.c_int, ct.c_int]

		self.__Dll.XilEnv_ImportVariProperties.restype = ct.c_int
		self.__Dll.XilEnv_ImportVariProperties.argtypes = [ct.c_char_p]

		self.__Dll.XilEnv_EnableRangeControl.restype = ct.c_int
		self.__Dll.XilEnv_EnableRangeControl.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_DisableRangeControl.restype = ct.c_int
		self.__Dll.XilEnv_DisableRangeControl.argtypes = [ct.c_char_p, ct.c_char_p]

		self.__Dll.XilEnv_WriteFrame.restype = ct.c_int
		self.__Dll.XilEnv_WriteFrame.argtypes = [ct.POINTER(ct.c_int),ct.POINTER(ct.c_double),ct.c_int]

		self.__Dll.XilEnv_GetFrame.restype = ct.c_int
		self.__Dll.XilEnv_GetFrame.argtypes = [ct.POINTER(ct.c_int),ct.POINTER(ct.c_double),ct.c_int]

		self.__Dll.XilEnv_WriteFrameWaitReadFrame.restype = ct.c_int
		self.__Dll.XilEnv_WriteFrameWaitReadFrame.argtypes = [ct.POINTER(ct.c_int),ct.POINTER(ct.c_double),ct.c_int,ct.POINTER(ct.c_int),ct.POINTER(ct.c_double),ct.c_int]

		self.__Dll.XilEnv_ReferenceSymbol.restype = ct.c_int
		self.__Dll.XilEnv_ReferenceSymbol.argtypes = [ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.c_char_p, ct.c_int, ct.c_char_p, ct.c_double, ct.c_double, ct.c_int, ct.c_int, ct.c_int, ct.c_int]
